# poope

./: .gitignore  CMakeLists.txt  README.md  run.py
cmake/: config.cmake
cmd/: compile.cmd
source/: main.cpp
source/compiler/: PE.hpp  compiler.cpp  compiler.hpp  linker.cpp  linker.hpp  scanner.cpp  scanner.hpp  token.hpp
source/core/: buffer.hpp  compare.hpp  config.hpp  filesystem.hpp  hash.hpp  hash_map.hpp  math.hpp  string.cpp  string.hpp  string_builder.hpp  system.hpp
source/core/windows/: filesystem.cpp  system.cpp
